Revision history for Perl extension CGI::Application::Dispatch.

2.16 Mar 23, 2009
    - Fix: "$app->run() error handler breaks exception objects." RT#43340 (dekimsey)
    - Documentation improvements (Dave Baker, thinc)
    - remove "Makefile.PL", which appears to related to some test failures. Build.PL
      seems to work reliably. If removing Makefile.PL is a problem for you, maybe you have
      a better solution to RT#39793: https://rt.cpan.org/Ticket/Display.html?id=39793
      (Mark Stosberg)

2.15 Dec 4, 2008
    - Logging improvement: Quit duplicating $ENV{REQUEST_URI} for Not Found requests (Mark Stosberg)
    - Logging improvement: Remove stray "'" character (Mark Stosberg)

2.14 Nov 2, 2008
    - New feature: $ENV{PATH_INFO} is now abstracted through dispatch_path(). (RT#34069, Bradley Bailey) 
    - Attempted fix for "Couldn't open t/TEST.PL" error, RT#39793. Add comments to that ticket
      if you still have "make test" problems with Apache::Test. (Puneet Kishor, Kevin, Mark Stosberg) 
      http://rt.cpan.org/Public/Bug/Display.html?id=39793

2.13 Sep 16, 2008
    - Fixing various install issues by having a dumber Makefile.PL and Build.PL
      (#37859, Thanks to lkundrak)

2.12 Jan 03, 2007
    - Creating our own Makefile.PL instead of relying on create_makefile_pl
    - Fixed test problems with GET() not being exported by implicitly by some
      versions of Apache::Test
    - Fixed RT #32037 and clarifying some documentation

2.11 Oct 11, 2007
    - Fixed RT #30135 by using "slash" and "backslash" properly [Ricardo Signes and Michael Peters]
    - Fixed RT #30134 [Ricardo Signes and Michael Peters]
    - Fixed RT #28979 [GTERMARS]
    - Fixed RT #25298 [cpan@punch.net and Michael Peters]
    - Fixed RT #25297 [cpan@punch.net and Michael Peters]
    - Fixing cpan install problem with autogenerated Makefile.PL
    - Fixing failing test when IO::Scalar is not installed

2.10 Jan 15, 2007